# tyk_nb_local

./: .gitignore  AUTO_EXECUTE_PARAMETERS.md  CLAUDE.md  DEBUGGING.md  GRAPH_FIX_FINAL.md  GRAPH_RENDERING_FIX.md  MAP_PLOT_UPDATE.md  TEST_SUMMARY.md  build_app.py  first_cell.py  main.py  pruebatyk.py  pyproject.toml  requirements.txt  run_tests.sh  run_tyk_notebook.py  tyk-notebook.spec  tyk.py  tyk.py.new  tyk_app_entry.py  tyk_demo_20251018.py  tyk_orig.py
.claude/: - agregar .dats (articles.dat)  settings.local.json
config/: settings.py  urls.py
pre_notebook/: PruebaTYK.ipynb  pruebatyk.py  tyk_demo_20251018.ipynb  tyk_demo_20251018.py
tyk_notebook_app/: __init__.py  admin.py  apps.py  db.sqlite3  executor.py  importer.py  launcher.py  models.py  parser.py  settings.py  settings.py.backup  settings_packaged.py  urls.py  urls_main.py  views.py  wsgi.py
tyk_notebook_app/management/commands/: import_notebook.py
tyk_notebook_app/migrations/: 0001_initial.py  0002_alter_cell_source_code.py  0003_alter_cell_description.py  0004_alter_notebooksession_unique_together_and_more.py  0005_dashboardchart.py  0006_charttype_and_migrate_dashboard.py  0007_add_dashboard_chart_parameter.py  0008_add_cell_is_active.py  0009_add_venn_chart_type.py  0010_notebook_dataset_query.py  0011_notebook_overview_enabled.py
tyk_notebook_app/templates/notebook/: base.html  dashboard.html  detail.html  history.html  list.html  overview.html
tyk_notebook_app/tests/: __init__.py  test_executor.py  test_integration.py  test_models.py  test_views.py
(+14 files in other folders)
