[project]
name = "tyk-nb-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "ipython>=9.9.0",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "pycountry>=22.0",
    "pyinstaller>=6.17.0",
    "pyvis>=0.3",
    "requests>=2.32.5",
    "web-pdb>=1.6.3",
]
