[project]
name = "tyk-nb-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "geopandas>=1.1.3",
    "ipython>=9.9.0",
    "kaleido>=1.2.0",
    "markdown>=3.10",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "notebook>=7.5.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "playwright>=1.58.0",
    "plotly>=5.18",
    "pycountry>=22.0",
    "pyinstaller>=6.17.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3",
    "requests>=2.32.5",
    "ruff>=0.15.8",
    "weasyprint>=68.1",
    "web-pdb>=1.6.3",
    "whitenoise>=6.12.0",
]
